WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309090
FairPlay VP9 content fails to play.
https://bugs.webkit.org/show_bug.cgi?id=309090
Summary
FairPlay VP9 content fails to play.
Jean-Yves Avenard [:jya]
Reported
2026-03-03 11:36:32 PST
Open in Safari
https://yt-dash-mse-test.commondatastorage.googleapis.com/ppergame/cbcs/cbcs.html?media=vp9&drm=fairplay
verify playback DATA: Machines that support HDR vp9 decode. So T2 and AS machines EXPECTED RESULTS: Content plays ACTUAL RESULTS: Fails to load content
rdar://171210968
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-03-03 11:50:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59817
EWS
Comment 2
2026-03-04 02:20:56 PST
Committed
308622@main
(793355bed17d): <
https://commits.webkit.org/308622@main
> Reviewed commits have been landed. Closing PR #59817 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug