FairPlay VP9 content fails to play. https://bugs.webkit.org/show_bug.cgi?id=309090 rdar://171210968

Reviewed by Jer Noble.

MediaSource.isTypeSupported queried the AVStreamDataParser in the web content process.
For some codecs, this will attempt to check for hardware support and fails
due to the sandbox.
We add a fallback, that should the test fail, we will query the AVStreamDataParser
in the GPU process instead via a new MediaStrategy API.

Test: media/media-source/media-source-istypesupported-mimetype.html

* LayoutTests/media/media-source/media-source-istypesupported-mimetype-expected.txt: Added.
* LayoutTests/media/media-source/media-source-istypesupported-mimetype.html: Added.
* Source/WebCore/platform/MediaStrategy.h:
* Source/WebCore/platform/graphics/MediaPlayer.h: Add explicit default constructor to allow for field initializers list.
* Source/WebCore/platform/graphics/avfoundation/objc/AVStreamDataParserMIMETypeCache.mm:
(WebCore::AVStreamDataParserMIMETypeCache::canDecodeExtendedType):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::canDecodeExtendedType const):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.h:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.messages.in:
* Source/WebKit/WebProcess/GPU/media/WebMediaStrategy.cpp:
(WebKit::WebMediaStrategy::canDecodeExtendedType):
* Source/WebKit/WebProcess/GPU/media/WebMediaStrategy.h:

Canonical link: https://commits.webkit.org/308622@main